--- a/local-tester/Algo_tester.ipynb
+++ b/local-tester/Algo_tester.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "da1b0cda-7c2c-4cbe-9194-9f406ba50bd6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
     "# pulls data from the current block and round\n",
     "url = \"https://mainnet-api.tig.foundation/\"\n",
     "block_data = requests.get(f\"{url}get-block\").json()\n",
-    "latest_block =[\"block\"][\"id\"]\n",
+    "latest_block = block_data[\"block\"][\"id\"]\n",
     "\n",
     "challenge_data = requests.get(f\"{url}get-challenges?block_id={latest_block}\").json()\n",
     "algorithm_data = requests.get(f\"{url}get-algorithms?block_id={latest_block}\").json()\n",
